@@ -9472,7 +9472,7 @@ Inst69Quest3_Level = "80"
 Inst69Quest3_Attain = "78"
 Inst69Quest3_Aim = "Chromie wants you to use the Arcane Disruptor on the suspicious crates in Stratholme Past, then speak to her near the entrance to Stratholme."
 Inst69Quest3_Location = "Chromie (Old Stratholme; "..YELLOW.."[??]"..WHITE..")"
-Inst69Quest3_Note = "No information at this time."
+Inst69Quest3_Note = "No information."
 Inst69Quest3_Prequest = "None"
 Inst69Quest3_Folgequest = "A Royal Escort"
 -- No Rewards for this quest
@@ -9808,7 +9808,7 @@ Inst72Quest2_Level = "71"
 Inst72Quest2_Attain = "70"
 Inst72Quest2_Aim = "Librarian Serrah wants you to enter the Nexus and recover Berinand's Research."
 Inst72Quest2_Location = "Librarian Serrah (Borean Tundra - Transitus Shield; "..YELLOW.."33.4, 34.3"..WHITE..")"
-Inst72Quest2_Note = "The Research Book is on the ground in the hall on the way to Grand Magus Telestra near "..YELLOW.."[3]"..WHITE.."."
+Inst72Quest2_Note = "The Research Book is on the ground in the hall on the way to Grand Magus Telestra at "..YELLOW.."[6]"..WHITE.."."
 Inst72Quest2_Prequest = "None"
 Inst72Quest2_Folgequest = "None"
 --
@@ -10352,10 +10352,10 @@ Inst77Quest1name1 = "Emblem of Heroism"
 --Quest 2 Alliance
 Inst77Quest2 = "2. Halls of Stone"
 Inst77Quest2_Level = "78"
-Inst77Quest2_Attain = "??"
+Inst77Quest2_Attain = "76"
 Inst77Quest2_Aim = "Brann Bronzebeard wants you to accompany him as he uncovers the secrets that lie in the Halls of Stone."
 Inst77Quest2_Location = "Brann Bronzebeard (Ulduar: Halls of Stone; "..YELLOW.."[3]"..WHITE..")"
-Inst77Quest2_Note = "No information."
+Inst77Quest2_Note = "To complete the quest you must follow Brann Bronzebeard into the nearby chamber at "..YELLOW.."[4]"..WHITE.." and protect him from waves of mobs while he works on the stone tablets there. Upon his success, the Tribunal Chest next to the tablest can be opened.\n\nTalk to Brann Bronzebeard again and he'll run to the door outside "..YELLOW.."[5]"..WHITE..". You do not need to follow him, he'll wait for you there. Once defeating Sjonnir the Ironshaper there, the quest will be complete and can be turned into Brahn Bronzebeard."
 Inst77Quest2_Prequest = "None"
 Inst77Quest2_Folgequest = "None"
 --
